# BakR

./: .gitignore  README.md  WEB_GUIDE.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  run_flet.py  run_nicegui.py  start_flet.bat  start_gui.py  start_vue_gui.py  test_restore.py
src/: __main__.py  backup_finder.py  backup_restorer.py  main.py  nicegui_app.py
src/bakr/: __main__.py
src/bakr/cli/: cli_app.py
src/bakr/core/: backup_finder.py
src/baku/: __main__.py
src/baku/cli/: cli_app.py
src/baku/config/: config.json  config.py
src/baku/core/: backup_finder.py  file_queue.py
src/baku/gui/: ui_main.py
src/baku/gui/ttkb/: __init__.py  action_panel.py  log_panel.py  main.py  queue_panel.py  theme_panel.py
src/baku/gui/vue/: api.py  index.html  main.py  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/baku/gui/vue/src/: App.vue  main.js  style.css
src/baku/gui/vue/src/components/: ActionPanel.vue  DragDropZone.vue  LogPanel.vue  ProgressBar.vue  QueuePanel.vue  ResultList.vue  ThemePanel.vue
src/baku/gui/web/: index.html  main.js
src/baku/tui/: rich_app.py
src/bakui/: __init__.py  __main__.py  api.py  api_server.py  desktop_launcher.py  ui_main.py
src/bakui/custk/: main.py  queue_panel.py  restore_panel.py  scan_panel.py  stats_panel.py  utils.py
src/bakui/fletui/: __init__.py  flet_app.py
src/bakui/pyqt/: main.py  queue_panel.py  restore_panel.py  scan_panel.py  stats_panel.py
src/bakui/tauri/tauri-app/: package.json  pnpm-lock.yaml
src/bakui/tauri/tauri-app/src/: App.vue
src/bakui/tauri/tauri-app/src-tauri/: Cargo.toml  pyproject.toml
src/bakui/tauri/tauri-app/src-tauri/python/tauri_app/: __init__.py  baku_bridge.py  ext_mod.py
src/bakui/tauri/tauri-app/src/hooks/: useTauriFile.ts
src/bakui/web/: drag_drop.html  index.html
src/bakui/web/demo/: demo.py  index.html
src/bakui/web/vue/: README.md  index.html  package-lock.json  package.json  vite.config.js
src/bakui/web/vue/src/: App.vue
src/bakui/web/vue/src/components/: ControlPanel.vue  DragDrop.vue  FileTable.vue
src/cli/: cli_app.py
src/config/: config.py
src/core/: backup_finder.py  backup_restorer.py  file_queue.py  logger_config.py  multi_file_manager.py
src/tui/: styles.tcss  tui_app.py
src/web/: main_app.py  streamlit_app.py
src/web/components/: backup_scanner.py  file_restorer.py  file_selector.py
src/web/static/: drag_drop.html  styles.css
src/web/utils/: multi_file_handler.py
test/: tauri.conf.json  test_bakr.py
ui/: index.html  script.js  styles.css
